# virtual-try-on

./: .env.example  .gitignore  LICENSE  README.md  manage.py  pyproject.toml
face_detection/: admin.py  models.py  urls.py  utils.py  views.py
face_detection/management/commands/: populate_sample_data.py
face_detection/migrations/: 0001_initial.py
models_manager/: apps.py  models.py  serializers.py  urls.py  views.py
models_manager/management/: __init__.py
models_manager/management/commands/: populate_sample_data.py
models_manager/migrations/: 0001_initial.py
static/css/: main.css  tryron.css
static/js/: core.js  face-tracker.js  hybrid-face-tracker.js  mediapipe-client.js  model-loader.js  simple-models.js  tryron-app.js
templates/: base.html  index.html  tryron.html
virtual_try_on/: asgi.py  settings.py  urls.py  wsgi.py
